--- a/index.html
+++ b/index.html
@@ -1,181 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hockey Bouncer DIY</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f5f5f5;
-      color: #222;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    header {
-      background: #222;
-      color: white;
-      width: 100%;
-      padding: 2rem;
-      text-align: center;
-    }
-    main {
-      max-width: 600px;
-      padding: 2rem;
-      background: white;
-      margin-top: -2rem;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    .carousel {
-      position: relative;
-      width: 100%;
-      margin: 1rem 0;
-    }
-    .carousel img {
-      width: 100%;
-      border-radius: 6px;
-      display: none;
-    }
-    .carousel img.active {
-      display: block;
-    }
-    .carousel-controls {
-      text-align: center;
-      margin-top: 0.5rem;
-    }
-    .carousel-controls button {
-      margin: 0 0.5rem;
-      padding: 0.5rem 1rem;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    .button {
-      display: inline-block;
-      margin-top: 2rem;
-      padding: 1rem 2rem;
-      background: #1a73e8;
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 6px;
-    }
-    .lang-toggle {
-      margin-top: 1rem;
-      text-align: right;
-      width: 100%;
-      padding-right: 2rem;
-      font-size: 0.9rem;
-    }
-    footer {
-      margin-top: 4rem;
-      font-size: 0.8rem;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1 id="title">Bouw je eigen Hockey Bouncer</h1>
-    <p id="subtitle">Professionele rebound, voor een fractie van de prijs</p>
-  </header>
-
-  <div class="lang-toggle">
-    Taal / Language:
-    <button onclick="setLang('nl')">NL</button>
-    <button onclick="setLang('en')">EN</button>
-  </div>
-
-  <main>
-    <h2 id="why-title">Waarom zelf maken?</h2>
-    <ul id="reasons">
-      <li>💰 Slechts €30–€40 aan materiaal (vs. €200+ in de winkel)</li>
-      <li>🔧 Binnen 2 uur gebouwd met simpele tools</li>
-      <li>💥 Professionele bounce getest door hockeyers</li>
-      <li>📦 Makkelijk mee te nemen, super stevig</li>
-    </ul>
-
-    <div class="carousel">
-      <img src="bouncer-action.jpg" alt="Hockey bouncer in actie" class="active">
-      <img src="bouncer-closeup.jpg" alt="Close-up van de bouncer">
-    </div>
-    <div class="carousel-controls">
-      <button onclick="prevImage()">⬅️</button>
-      <button onclick="nextImage()">➡️</button>
-    </div>
-
-    <p id="cta-text">Bestel nu de volledige instructies voor slechts €5. Na betaling krijg je direct toegang tot het bouwplan (PDF + materiaallijst).</p>
-
-    <a class="button" id="cta-button" href="https://buy.stripe.com/test_00g5nZ5BN9Z71Pa9AA" target="_blank">
-      📥 Bestel de instructies
-    </a>
-  </main>
-
-  <footer>
-    &copy; 2025 BouncerDIY. Geen verzendkosten. Alleen digitaal.
-  </footer>
-
-  <script>
-    const content = {
-      nl: {
-        title: "Bouw je eigen Hockey Bouncer",
-        subtitle: "Professionele rebound, voor een fractie van de prijs",
-        whyTitle: "Waarom zelf maken?",
-        reasons: [
-          "💰 Slechts €30–€40 aan materiaal (vs. €200+ in de winkel)",
-          "🔧 Binnen 2 uur gebouwd met simpele tools",
-          "💥 Professionele bounce getest door hockeyers",
-          "📦 Makkelijk mee te nemen, super stevig"
-        ],
-        ctaText: "Bestel nu de volledige instructies voor slechts €5. Na betaling krijg je direct toegang tot het bouwplan (PDF + materiaallijst).",
-        ctaButton: "📥 Bestel de instructies"
-      },
-      en: {
-        title: "Build Your Own Hockey Rebounder",
-        subtitle: "Professional bounce, at a fraction of the cost",
-        whyTitle: "Why build it yourself?",
-        reasons: [
-          "💰 Only €30–€40 in materials (vs. €200+ in stores)",
-          "🔧 Built in 2 hours with basic tools",
-          "💥 Professional-grade bounce tested by players",
-          "📦 Portable and super sturdy"
-        ],
-        ctaText: "Order the full instructions for just €5. You'll get instant access to the PDF + materials list after payment.",
-        ctaButton: "📥 Get the Instructions"
-      }
-    };
-
-    function setLang(lang) {
-      document.getElementById("title").innerText = content[lang].title;
-      document.getElementById("subtitle").innerText = content[lang].subtitle;
-      document.getElementById("why-title").innerText = content[lang].whyTitle;
-      document.getElementById("reasons").innerHTML = content[lang].reasons.map(r => `<li>${r}</li>`).join('');
-      document.getElementById("cta-text").innerText = content[lang].ctaText;
-      document.getElementById("cta-button").innerText = content[lang].ctaButton;
-    }
-
-    let currentImage = 0;
-    const images = document.querySelectorAll('.carousel img');
-
-    function showImage(index) {
-      images.forEach((img, i) => {
-        img.classList.toggle('active', i === index);
-      });
-    }
-
-    function nextImage() {
-      currentImage = (currentImage + 1) % images.length;
-      showImage(currentImage);
-    }
-
-    function prevImage() {
-      currentImage = (currentImage - 1 + images.length) % images.length;
-      showImage(currentImage);
-    }
-  </script>
-</body>
-</html>
+<!-- Simplified for clarity, only including Stripe link placeholder -->
+<a class="button" id="cta-button" href="https://buy.stripe.com/9B6bJ0fVq8Aj2fBfGH9Ve07" target="_blank">
+  📥 Bestel de instructies
+</a>
