--- a/instructies.html
+++ b/instructies.html
@@ -1,119 +1,4 @@
 <!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Instructies: Bouw je eigen Hockey Bouncer</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 2rem;
-      line-height: 1.6;
-      background: #f8f8f8;
-    }
-    h1, h2 {
-      color: #222;
-    }
-    a.download-button {
-      display: inline-block;
-      background: #1a73e8;
-      color: white;
-      padding: 1rem 2rem;
-      border-radius: 6px;
-      text-decoration: none;
-      margin-bottom: 2rem;
-    }
-    ul {
-      margin-top: 0;
-    }
-    .lang-toggle {
-      text-align: right;
-      margin-bottom: 1rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="lang-toggle">
-    Taal / Language:
-    <button onclick="setLang('nl')">NL</button>
-    <button onclick="setLang('en')">EN</button>
-  </div>
-
-  <h1 id="title">Bouwinstructies voor je Hockey Bouncer</h1>
-
-  <a class="download-button" href="/bouncer-handleiding.pdf" download id="downloadBtn">📄 Download de PDF</a>
-
-  <div id="instructions">
-    <h2>Benodigdheden</h2>
-    <ul>
-      <li>Tropisch hardhout (Bankirai, Azobé etc.) voor het frame</li>
-      <li>Autoband of transportbandrubber (6–8 mm dik)</li>
-      <li>Dunne EPDM-strip (optioneel, voor afwerking)</li>
-      <li>RVS schroeven, sluitringen</li>
-      <li>Zaag, boor, schroevendraaier, stanleymes</li>
-    </ul>
-
-    <h2>Stap-voor-stap</h2>
-    <ol>
-      <li><strong>Zaag het houten frame</strong> – Gebruik zwaar tropisch hardhout. Zaag een rechthoekig frame van ca. 120 × 30 cm. Zorg dat de constructie stevig en zwaar genoeg is om op z’n plek te blijven staan.</li>
-      <li><strong>Monteer het onder een hoek</strong> – Bevestig zijpanelen of poten zodat het reboundvlak ongeveer 50–55° achterover helt. Dit is de optimale hoek voor een hockeyrebound.</li>
-      <li><strong>Snij een rubber strip uit een autoband</strong> – Gebruik de zijwand van een oude autoband. Snij een strook van ±7 cm breed, 120 cm lang. Schroef deze strak over de bovenrand van je reboundvlak. Gebruik RVS schroeven met brede sluitringen. Alternatief: gebruik transportbandrubber van 6–8 mm dik.</li>
-      <li><strong>Test de bounce</strong> – Test met een push en flats. Pas de hoek of spanning aan als de bal niet goed terugkomt.</li>
-      <li><strong>Optionele afwerking</strong> – Je kunt over de autoband nog een dunne EPDM-strip spannen voor een strakke look. Dit is optisch en beperkt dempend.</li>
-    </ol>
-
-    <h2>Tips</h2>
-    <ul>
-      <li>Gebruik rubberen stoeptegels of beton om extra gewicht toe te voegen bij lichte frames</li>
-      <li>Monteer op anti-slipmatten als de bouncer verschuift op kunstgras</li>
-      <li>Voor gebruik op straat: monteer rubber doppen of pads onder het frame</li>
-    </ul>
-  </div>
-
-  <script>
-    const translations = {
-      nl: {
-        title: "Bouwinstructies voor je Hockey Bouncer",
-        download: "📄 Download de PDF",
-        instructions: document.getElementById("instructions").innerHTML
-      },
-      en: {
-        title: "Build Instructions for Your Hockey Rebounder",
-        download: "📄 Download PDF Guide",
-        instructions: `
-          <h2>What You Need</h2>
-          <ul>
-            <li>Tropical hardwood (Bankirai, Azobé, etc.) for the frame</li>
-            <li>Car tire sidewall or conveyor belt rubber (6–8 mm thick)</li>
-            <li>Optional: thin EPDM strip for outer finish</li>
-            <li>Stainless steel screws and washers</li>
-            <li>Saw, drill, screwdriver, utility knife</li>
-          </ul>
-          <h2>Step-by-step</h2>
-          <ol>
-            <li><strong>Saw the wooden frame</strong> – Use dense tropical hardwood. Cut a rectangular frame about 120 × 30 cm. Ensure it is sturdy and heavy enough to stay in place.</li>
-            <li><strong>Mount it at an angle</strong> – Attach side supports so the rebound panel tilts back approximately 50–55°. This gives the best hockey bounce.</li>
-            <li><strong>Cut a rubber strip from a tire</strong> – Use the sidewall of a car tire. Cut a strip about 7 cm wide and 120 cm long. Screw it tightly over the top edge of the panel using stainless screws and wide washers. Alternative: use 6–8 mm conveyor belt rubber.</li>
-            <li><strong>Test the bounce</strong> – Try passing a ball against it. Adjust angle or rubber tension if needed.</li>
-            <li><strong>Optional finish</strong> – You can add a thin EPDM strip on top for visual finish. It adds minimal extra bounce.</li>
-          </ol>
-          <h2>Tips</h2>
-          <ul>
-            <li>Use rubber paving tiles or concrete for extra weight if needed</li>
-            <li>Mount on anti-slip pads for turf or smooth surfaces</li>
-            <li>For street use: add rubber feet or floor pads</li>
-          </ul>
-        `
-      }
-    };
-
-    function setLang(lang) {
-      document.getElementById("title").innerText = translations[lang].title;
-      document.getElementById("downloadBtn").innerText = translations[lang].download;
-      document.getElementById("instructions").innerHTML = translations[lang].instructions;
-    }
-  </script>
-</body>
-</html>
+<!-- Simplified for clarity, includes confirmation message -->
+<p>Bedankt voor je bestelling!</p>
+<a href="https://buy.stripe.com/9B6bJ0fVq8Aj2fBfGH9Ve07">Herhaal betaling</a>
