--- a/instructies.html
+++ b/instructies.html
@@ -1,4 +1,65 @@
 <!DOCTYPE html>
-<!-- Simplified for clarity, includes confirmation message -->
-<p>Bedankt voor je bestelling!</p>
-<a href="https://buy.stripe.com/9B6bJ0fVq8Aj2fBfGH9Ve07">Herhaal betaling</a>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Instructies Hockey Bouncer</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      background: #f2f2f2;
+      color: #222;
+    }
+    header {
+      background: #111;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .container {
+      max-width: 700px;
+      margin: -2rem auto 2rem auto;
+      background: white;
+      border-radius: 10px;
+      padding: 2rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin-top: 0;
+    }
+    a.button {
+      display: inline-block;
+      background: #0070f3;
+      color: white;
+      padding: 1rem 2rem;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 1rem;
+      margin-top: 1rem;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #666;
+      padding: 2rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Instructies</h1>
+    <p>Bedankt voor je bestelling!</p>
+  </header>
+
+  <div class="container">
+    <p>Hieronder kun je de handleiding downloaden met alle stappen om zelf je hockey bouncer te bouwen.</p>
+    <a class="button" href="bouncer-handleiding.pdf" download>📄 Download de handleiding (PDF)</a>
+    <p style="margin-top:1rem;">Of keer terug naar de <a href="index.html">homepage</a>.</p>
+  </div>
+
+  <footer>
+    © 2025 BouncerDIY. Geen verzendkosten. Alleen digitaal.
+  </footer>
+</body>
+</html>
